- new Integer -> Integer.valueOf; ditto Long - HTMLStyleBuilder generics and finals - PageRenderer generics